# log-args

./: .gitignore  .justfile  Cargo.toml  README.md  USAGE.md  debug_test.rs  plan.md
.github/workflows/: publish.yml
examples/: all.rs  async_move.rs  async_spawn.rs  clone_upfront_demo.rs  custom.rs  custom_service_demo.rs  fields.rs  full.rs  log.rs  main.rs  params.rs  simple_debug.rs  span.rs  span_example.rs  test_output_format.rs
log-args-runtime/: Cargo.toml  README.md
log-args-runtime/src/: lib.rs
log_args_runtime/: Cargo.toml
log_args_runtime/src/: lib.rs
src/: context.rs  lib.rs  lib.rs.bak  support.rs
target copy/: .rustc_info.json
target copy/tests/trybuild/: .rustc_info.json
target copy/tests/trybuild/log_args/: Cargo.toml
tests/: 01-all-args.rs  02-selected-fields.rs  03-subfield-logging.rs  04-custom-fields.rs  05-async-fn.rs  06-invalid-input.rs  06-invalid-input.stderr  07-all-log-levels.rs  08-span-feature.rs  complex_expressions_tests.rs  current_attribute_tests.rs  function_name_tests.rs  integration_tests.rs  trybuild.rs
