[package]
name = "log_args"
version = "0.1.0"
edition = "2021"
autotests = false
authors = ["JS <mkjsm57@gmail.com>"]
description = "A simple procedural macro to log function arguments using the tracing crate."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MKJSM/log-args"
repository = "https://github.com/MKJSM/log-args"
rust-version = "1.65"
keywords = ["logging", "tracing", "macro", "proc-macro", "arguments"]
categories = [
    "development-tools::debugging",
    "development-tools::procedural-macro-helpers",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
chrono = "0.4"
log-args-runtime = { path = "./log-args-runtime" }

[dev-dependencies]
trybuild = "1.0.106"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
futures = "0.3.31"

[[example]]
name = "log"
path = "examples/log.rs"

[[example]]
name = "span"
path = "examples/span.rs"

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
harness = true
